# ChangeLog for dev-java/netbeans-ide
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-ide/ChangeLog,v 1.6 2011/08/22 12:45:13 fordfrog Exp $

  22 Aug 2011; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-ide-7.0.ebuild:
  Removed obsolete version

*netbeans-ide-7.0.1 (05 Aug 2011)

  05 Aug 2011; Miroslav Šulc <fordfrog@gentoo.org> +netbeans-ide-7.0.1.ebuild:
  Version bump

*netbeans-ide-7.0 (21 Apr 2011)

  21 Apr 2011; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-ide-7.0_rc2.ebuild, +netbeans-ide-7.0.ebuild:
  Bumped to latest version

*netbeans-ide-7.0_rc2 (08 Apr 2011)

  08 Apr 2011; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-ide-7.0_rc1.ebuild, +netbeans-ide-7.0_rc2.ebuild:
  Bumped to rc2

  30 Mar 2011; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-ide-7.0_rc1.ebuild:
  Fixed bug #361357

*netbeans-ide-7.0_rc1 (30 Mar 2011)

  30 Mar 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-ide-7.0_rc1.ebuild, +metadata.xml:
  Added new ebuild
