@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/netbeans-ide
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-ide/ChangeLog,v 1.6 2011/08/22 12:45:13 fordfrog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-ide/ChangeLog,v 1.7 2011/08/22 12:56:49 fordfrog Exp $
+
+  22 Aug 2011; Miroslav Šulc <fordfrog@gentoo.org> netbeans-ide-7.0.1.ebuild:
+  Fixed problem with compilation on some systems when DISPLAY is set (bug
+  #379769)
 
   22 Aug 2011; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-ide-7.0.ebuild:
   Removed obsolete version
